<resources>
  <string name="app_name">NewsReader</string>
  <string name="loading">読み込み中です</string>
  <string name="error">エラーが発生しました</string>
  <string name="no_results">ニュース項目はありません</string>
  <string name="options_menu">オプションメニュー</string>
  <string name="share">シェア</string>
  <string name="save">保存</string>
  <string name="save_for_later">後で読むために保存</string>
  <string name="remove_from_followed_items">[保存した記事]から削除</string>
  <string name="no_followed_items">保存した記事はありません。</string>
  <string name="no_recent_items">最近閲覧した記事はありません。</string>
  <string name="toolbar_share">ニュースをシェアする</string>
  <string name="item_followed">記事を[フォロー中]に保存しました</string>
  <string name="item_unfollowed">記事を[フォロー中]から削除しました</string>
  <string name="drawer_all_news">すべての記事一覧</string>
  <string name="drawer_google_news">Google News</string>
  <string name="drawer_toyokeizai_news">東洋経済オンライン</string>
  <string name="drawer_followed_news">フォロー中</string>
  <string name="drawer_recent_news">最近閲覧した記事</string>
  <string name="add_news_source_title">記事取得先を登録</string>
  <string name="add_news_source_button">記事取得先を登録する</string>
  <string name="news_source_added">%1$sを登録した</string>
  <string name="name">名前</string>
  <string name="url">URL</string>
  <string name="validate_required">%1$sは必須です</string>
  <string name="validate_too_long">%1$sは%2$d文字を超えることはいけません</string>
  <string name="validate_not_url_format">URLではありません</string>
</resources>
